custom query added +